--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,7 @@
            android:id="@+id/toolbar"
            >
 
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Hello"
-               android:layout_alignParentLeft="true"
 
-               />
 
 
        </androidx.appcompat.widget.Toolbar>
@@ -37,25 +31,36 @@
            android:orientation="vertical"
 
            android:visibility="visible">
-           <com.denzcoskun.imageslider.ImageSlider
-               android:id="@+id/image_slider"
+
+
+
+           <androidx.cardview.widget.CardView
+               app:cardCornerRadius="6dp"
+               android:layout_margin="16dp"
                android:layout_width="match_parent"
-               android:layout_height="200dp"
-               app:iss_auto_cycle="true"
-               app:iss_period="1000"
-               app:iss_placeholder="@drawable/ic_launcher_foreground"
-               app:iss_error_image="@drawable/ic_launcher_background"
-               app:iss_delay="0"/>
-
-<!--           <androidx.cardview.widget.CardView-->
-<!--               app:cardCornerRadius="6dp"-->
-<!--               android:layout_margin="16dp"-->
-<!--               android:layout_width="match_parent"-->
-<!--               android:layout_height="wrap_content">-->
+               android:layout_height="wrap_content">
+               <com.denzcoskun.imageslider.ImageSlider
+                   android:id="@+id/image_slider"
+                   android:layout_width="match_parent"
+                   android:layout_height="200dp"
+                   app:iss_auto_cycle="true"
+                   app:iss_period="1000"
+                   app:iss_placeholder="@drawable/ic_launcher_foreground"
+                   app:iss_error_image="@drawable/ic_launcher_background"
+                   app:iss_delay="0"/>
 
 
 
-<!--           </androidx.cardview.widget.CardView>-->
+
+           </androidx.cardview.widget.CardView>
+           <GridView
+               android:id="@+id/idGVcourses"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:horizontalSpacing="6dp"
+               android:numColumns="4"
+               android:verticalSpacing="6dp" />
+
 
 
 
