--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#05000000"
     tools:context=".MainActivity"
     tools:openDrawer="start"
     android:id="@+id/drawer"
@@ -58,6 +59,7 @@
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:horizontalSpacing="6dp"
+               android:layout_margin="6dp"
                android:numColumns="4"
                android:verticalSpacing="6dp" />
 
